--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   get: ^4.7.2
+  http: ^1.1.0
+  image_picker: ^1.0.4
+  image_picker_web: ^4.0.0
   intl: ^0.20.2
   supabase_flutter: ^2.10.3
 
